devops/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-solution
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5000
  selector:
    app: hello-solution
