devops/manifests/api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-solution-aicollaboration.io
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - aiproduct.io
    secretName: tls-latest-aiproduct.io
  rules:
   - host: hello-solution.aiproduct.io
     http:
      paths:
      - path: /
        backend:
          serviceName: hello-solution
          servicePort: 80
